bugfix in the pynb

--- a/Weld_test.ipynb
+++ b/Weld_test.ipynb
@@ -207,9 +207,9 @@
     "R = Quantity(6, unit=\"millimeter\")\n",
     "b = Quantity(3, unit=\"millimeter\")\n",
     "c = Quantity(1, unit=\"millimeter\")\n",
-    "u_naht_dict = dict(t=t, beta=beta, R=R, b=b, c=c)\n",
+    "u_naht = UGroove(t=t, beta=beta, R=R, b=b, c=c)\n",
     "\n",
-    "profile03 = grooveType(u_naht_dict, groove_type=\"u\")\n",
+    "profile03 = groove_to_profile(u_naht)\n",
     "\n",
     "profile03_data = profile03.rasterize(0.5)\n",
     "\n",
