bugfix2 in the pynb

--- a/Weld_test.ipynb
+++ b/Weld_test.ipynb
@@ -28,10 +28,10 @@
    "source": [
     "# Values for the Single V Groove Butt Weld\n",
     "# in a dictionary\n",
-    "t = Q_(0.009, unit=\"meter\")\n",
-    "alpha = Q_(40, unit=\"deg\")\n",
-    "b = Q_(0.2, unit=\"centimeter\")\n",
-    "c = Q_(1, unit=\"millimeter\")\n",
+    "t = Q_(0.009, \"meter\")\n",
+    "alpha = Q_(40, \"deg\")\n",
+    "b = Q_(0.2, \"centimeter\")\n",
+    "c = Q_(1, \"millimeter\")\n",
     "v_naht = VGroove(t=t, alpha=alpha, b=b, c=c)"
    ]
   },
@@ -141,10 +141,10 @@
    "source": [
     "# Values for the Single V Groove Butt Weld\n",
     "# in a dictionary\n",
-    "t = Quantity(0.009, unit=\"meter\")\n",
-    "alpha = Quantity(60, unit=\"deg\")\n",
-    "b = Quantity(0.2, unit=\"centimeter\")\n",
-    "c = Quantity(1, unit=\"millimeter\")\n",
+    "t = Q_(0.009, \"meter\")\n",
+    "alpha = Q_(60, \"deg\")\n",
+    "b = Q_(0.2, \"centimeter\")\n",
+    "c = Q_(1, \"millimeter\")\n",
     "v_naht = VGroove(t=t, alpha=alpha, b=b, c=c)\n",
     "\n",
     "profile02 = groove_to_profile(v_naht)\n",
@@ -202,11 +202,11 @@
     }
    ],
    "source": [
-    "t = Quantity(15, unit=\"millimeter\")\n",
-    "beta = Quantity(9, unit=\"deg\")\n",
-    "R = Quantity(6, unit=\"millimeter\")\n",
-    "b = Quantity(3, unit=\"millimeter\")\n",
-    "c = Quantity(1, unit=\"millimeter\")\n",
+    "t = Q_(15, \"millimeter\")\n",
+    "beta = Q_(9, \"deg\")\n",
+    "R = Q_(6, \"millimeter\")\n",
+    "b = Q_(3, \"millimeter\")\n",
+    "c = Q_(1, \"millimeter\")\n",
     "u_naht = UGroove(t=t, beta=beta, R=R, b=b, c=c)\n",
     "\n",
     "profile03 = groove_to_profile(u_naht)\n",
