--- a/Weld_test.ipynb
+++ b/Weld_test.ipynb
@@ -94,8 +94,9 @@
     "ax.axis(\"equal\")\n",
     "# ax.axis([-7, +7, -1, 20])\n",
     "ax.grid(True)\n",
+    "al = alpha.to("deg").magnitude",
     "ax.set(\n",
-    "    title=f\"single V Groove Butt Weld {alpha.value}° groove angle\",\n",
+    "    title=f\"single V Groove Butt Weld {al}° groove angle\",\n",
     "    xlabel=\"millimeter\",\n",
     "    ylabel=\"millimeter\",\n",
     ")\n",
@@ -157,8 +158,9 @@
     "# ax.axis([-7, +7, -1, 20])\n",
     "# [xmin, xmax, ymin, ymax]\n",
     "ax.grid(True)\n",
+    "al = alpha.to("deg").magnitude",
     "ax.set(\n",
-    "    title=f\"single V Groove Butt Weld {alpha.value}° groove angle\",\n",
+    "    title=f\"single V Groove Butt Weld {al}° groove angle\",\n",
     "    xlabel=\"millimeter\",\n",
     "    ylabel=\"millimeter\",\n",
     ")\n",
@@ -217,8 +219,9 @@
     "ax.cla()\n",
     "ax.axis(\"equal\")\n",
     "ax.grid(True)\n",
+    "be = beta.to("deg").magnitude",
     "ax.set(\n",
-    "    title=f\"single U Groove Butt Weld {beta.value}° groove angle\",\n",
+    "    title=f\"single U Groove Butt Weld {be}° groove angle\",\n",
     "    xlabel=\"millimeter\",\n",
     "    ylabel=\"millimeter\",\n",
     ")\n",
