Add time dependency to LCS tutorial

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -36,6 +36,7 @@
     "from IPython.display import display\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "import weldx.visualization as vs\n",
     "import weldx.transformations as tf"
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77e3110d53f1440ab50db107f27c1243",
+       "model_id": "e80e39467cb443b7a571442249389db4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,6 +88,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -107,7 +118,8 @@
     "vs.plot_coordinate_system(cs_01, ax, color=\"g\", label=\"system 1\")\n",
     "vs.plot_coordinate_system(cs_02, ax, color=\"b\", label=\"system 2\")\n",
     "vs.set_axes_equal(ax)\n",
-    "plt.legend();"
+    "plt.legend()\n",
+    ";"
    ]
   },
   {
@@ -121,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a510fd42e3fe45e8a76f0e14816b64db",
+       "model_id": "1e87e0a671ef4a6b8554e0b10e555e93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,6 +149,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -161,7 +183,8 @@
     "vs.plot_coordinate_system(cs_03, ax, color=\"g\", label=\"system 3\")\n",
     "vs.plot_coordinate_system(cs_04, ax, color=\"b\", label=\"system 4\")\n",
     "vs.set_axes_equal(ax)\n",
-    "plt.legend();"
+    "plt.legend()\n",
+    ";"
    ]
   },
   {
@@ -175,13 +198,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bfd7f31559d4dd588cfd8012e5fbdf2",
+       "model_id": "b54cee48a00b4598a047acec745c6c4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,15 +214,23 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# create a coordinate system by a 90° rotation around the x axis and subsequent 45° rotation around the y axis\n",
-    "cs_05 = tf.LocalCoordinateSystem.construct_from_euler(\n",
-    "    sequence=\"x\", angles=90, degrees=True, coordinates=[1, -1, 0]\n",
-    ")\n",
+    "cs_05 = tf.LocalCoordinateSystem.construct_from_euler(sequence=\"x\", angles=90, degrees=True, coordinates=[1, -1, 0])\n",
     "cs_06 = tf.LocalCoordinateSystem.construct_from_euler(\n",
-    "    sequence=\"xy\", angles=[90,45], degrees=True, coordinates=[2, -2, 0]\n",
+    "    sequence=\"xy\", angles=[90, 45], degrees=True, coordinates=[2, -2, 0]\n",
     ")\n",
     "\n",
     "# create 3d plot\n",
@@ -212,7 +243,8 @@
     "vs.plot_coordinate_system(cs_05, ax, color=\"g\", label=\"system 5\")\n",
     "vs.plot_coordinate_system(cs_06, ax, color=\"b\", label=\"system 6\")\n",
     "vs.set_axes_equal(ax)\n",
-    "plt.legend();"
+    "plt.legend()\n",
+    ";"
    ]
   },
   {
@@ -249,14 +281,14 @@
     "\n",
     "TODO: Add pictures\n",
     "\n",
-    "# Interactive examples\n",
+    "## Interactive examples for the + and - operator\n",
     "\n",
     "The folowing small interactive examples should give you a better understanding of how the `+` and `-` operators work. The examples provide several sliders to modify the orientations and positions of 2 coordinate systems. From those a third coordinate system is calculated using the `+` and `-` operator. Subsequently, the coordinate systems are plotted in relation to each other. The relevant lines of code, which generate the coordinate systems are:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +357,6 @@
     "\n",
     "\n",
     "def get_orientation_and_location(t_x, t_y, t_z, r_x, r_y, r_z):\n",
-    "    print(\"yay\")\n",
     "    rot_angles = np.array([r_x, r_y, r_z], float) / 180 * np.pi\n",
     "\n",
     "    rot_x = tf.rotation_matrix_x(rot_angles[0])\n",
@@ -381,26 +412,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yay\n",
-      "yay\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f0fdd4f2db34b0482c558c4a9ba0ce1",
+       "model_id": "1d706aa281c34531b66f7238c39c1060",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(Label(value='parent origin'), FloatSlider(value=0.0, description='x', layout=Lay…"
+       "HBox(children=(VBox(children=(Label(value='parent coordinates'), FloatSlider(value=0.0, description='x', layou…"
       ]
      },
      "metadata": {},
@@ -409,7 +432,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "202cca1532d64ba58e295f4197b719f2",
+       "model_id": "c30edc6efc5141fb88627a666213aadd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,18 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fd79343422542809e214728d9e7c5e4",
+       "model_id": "00853518739e4509bb6ebd6176091ab8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(Label(value='system 1 origin'), FloatSlider(value=0.0, description='x', layout=L…"
+       "HBox(children=(VBox(children=(Label(value='system 1 coordinates'), FloatSlider(value=0.0, description='x', lay…"
       ]
      },
      "metadata": {},
@@ -489,7 +512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a2c42b76f3448ae80635d3280e9883c",
+       "model_id": "bb026d54f4424aaca1481d4fb68495d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,6 +573,243 @@
     "\n",
     "create_interactive_plot(update_output2, limit_loc=axes_lim)\n",
     "out_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Invert method\n",
+    "\n",
+    "The `invert` method calculates how a parent coordinate system is positioned and oriented in its child coordinate system:\n",
+    "\n",
+    "~~~ python\n",
+    "cs_child_in_parent = cs_parent_in_child.invert()\n",
+    "~~~\n",
+    "\n",
+    "Here is a short example with visualization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c2337fcbfb749c3874565346b01b3d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f61c4f5ef90>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs_child_in_parent = tf.LocalCoordinateSystem.construct_from_euler(\n",
+    "    sequence=\"xy\", angles=[90, 45], degrees=True, coordinates=[2, 3, 0]\n",
+    ")\n",
+    "cs_parent_in_child = cs_child_in_parent.invert()\n",
+    "\n",
+    "# create subplots\n",
+    "fig = plt.figure()\n",
+    "fig.canvas.layout.height = \"500px\"\n",
+    "fig.canvas.layout.width = \"1000px\"\n",
+    "gs = fig.add_gridspec(1, 2)\n",
+    "ax3_0 = fig.add_subplot(gs[0, 0], projection=\"3d\")\n",
+    "ax3_1 = fig.add_subplot(gs[0, 1], projection=\"3d\")\n",
+    "\n",
+    "# first plot\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_0, color=\"r\", label=\"parent\")\n",
+    "vs.plot_coordinate_system(cs_child_in_parent, ax3_0, color=\"g\", label=\"child\")\n",
+    "ax3_0.set_xlim([-3, 3])\n",
+    "ax3_0.set_ylim([-3, 3])\n",
+    "ax3_0.set_zlim([-3, 3])\n",
+    "ax3_0.set_title(\"child in parent\")\n",
+    "ax3_0.legend()\n",
+    "\n",
+    "\n",
+    "# second plot\n",
+    "vs.plot_coordinate_system(cs_parent_in_child, ax3_1, color=\"r\", label=\"parent\")\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_1, color=\"g\", label=\"child\")\n",
+    "ax3_1.set_xlim([-3, 3])\n",
+    "ax3_1.set_ylim([-3, 3])\n",
+    "ax3_1.set_zlim([-3, 3])\n",
+    "ax3_1.set_title(\"parent in child\")\n",
+    "ax3_1.legend()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time dependency\n",
+    "\n",
+    "The orientation and position of a local coordinate system towards their reference system might vary in time. For example, in a welding process, the position of the torch towards the specimen is changing constantly. The LocalCoordinateSystem provides an interface for such cases. All previously shown construction methods also provide the option to pass a `time` parameter.\n",
+    "\n",
+    "> **IMPORTANT HINT:** In the current package version, only the constructors `time` parameter is actually working\n",
+    "\n",
+    "> **TODO:** Rewrite examples if factory methods also support time dependency\n",
+    "\n",
+    "To create a time dependent system, you have to provide a list of timestamps that can be converted to a `pandas.DateTimeIndex`. If you do, you also need to provide the extra data for the `orientation` and/or `coordinates` to the constructor or construction method. You do this by adding an extra outer dimension to the corresponding time dependent function parameter. For example: If you want to create a moving coordinatesystem with 2 timestamps, you can do it by like this:\n",
+    "\n",
+    "~~~ python\n",
+    "time = [\"2010-02-01\", \"2010-02-02\"]\n",
+    "\n",
+    " # fixed orientation (no extra dimension)\n",
+    "orientation_mov = [[0, -1, 0], [1, 0, 0], [0, 0, 1]]\n",
+    "\n",
+    "# time dependent coordinates (extra dimension)\n",
+    "coordinates_mov = [[-3, 0, 0], [0, 0, 2]] \n",
+    "\n",
+    "cs_mov_in_ref = tf.LocalCoordinateSystem(orientation=orientation_mov, coordinates=coordinates_mov, time=time)\n",
+    "~~~\n",
+    "\n",
+    "A coordinate system with varying orientation between 2 timestamps is defined by:\n",
+    "\n",
+    "~~~ python\n",
+    "time = [\"2010-02-01\", \"2010-02-02\"]\n",
+    "\n",
+    "# time dependent orientation (extra coordinate)\n",
+    "orientation_rot = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]] \n",
+    "\n",
+    "# fixed coordinates (no extra dimension)\n",
+    "coordinates_rot = [1, 0, 2] \n",
+    "\n",
+    "cs_rot_in_ref = tf.LocalCoordinateSystem(orientation=orientation_rot, coordinates=coordinates_rot, time=time)\n",
+    "~~~\n",
+    "\n",
+    "You can also create a rotating and moving coordinate system:\n",
+    "\n",
+    "~~~ python\n",
+    "time = [\"2010-02-01\", \"2010-02-02\"]\n",
+    "\n",
+    "coordinates_movrot = [[0, 3, 0], [-2, 3, 2]]\n",
+    "orientation_movrot = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]]\n",
+    "\n",
+    "cs_movrot_in_ref = tf.LocalCoordinateSystem(orientation=orientation_movrot, coordinates=coordinates_movrot, time=time)\n",
+    "~~~\n",
+    "\n",
+    "You have to ensure, that the extra outer dimension has always the same number of entries as number of time stamps you provided. Otherwise an exception is raised. In case your coordinate system data is not always providing orientation and coordinates at the same time, you need to interpolate the missing values first.\n",
+    "\n",
+    "Here is a visualization of the discussed coordinate systems at the two different times:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "84a0862f140a49a6ba6c2524bcebbaee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f61c1967150>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define coordinate systems\n",
+    "time = [\"2010-02-01\", \"2010-02-02\"]\n",
+    "\n",
+    "orientation_mov = [[0, -1, 0], [1, 0, 0], [0, 0, 1]]\n",
+    "coordinates_mov = [[-3, 0, 0], [0, 0, 2]] \n",
+    "cs_mov_in_ref = tf.LocalCoordinateSystem(orientation=orientation_mov, coordinates=coordinates_mov, time=time)\n",
+    "\n",
+    "orientation_rot = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]] \n",
+    "coordinates_rot = [1, 0, 2] \n",
+    "cs_rot_in_ref = tf.LocalCoordinateSystem(orientation=orientation_rot, coordinates=coordinates_rot, time=time)\n",
+    "\n",
+    "coordinates_movrot = [[0, 3, 0], [-2, 3, 2]]\n",
+    "orientation_movrot = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]]\n",
+    "cs_movrot_in_ref = tf.LocalCoordinateSystem(orientation=orientation_movrot, coordinates=coordinates_movrot, time=time)\n",
+    "\n",
+    "# plot coordinate systems\n",
+    "fig_time_dep = plt.figure()\n",
+    "fig_time_dep.canvas.layout.height = \"500px\"\n",
+    "fig_time_dep.canvas.layout.width = \"1000px\"\n",
+    "gs_time_dep = fig_time_dep.add_gridspec(1, 2)\n",
+    "ax3_0_time_dep = fig_time_dep.add_subplot(gs_time_dep[0, 0], projection=\"3d\")\n",
+    "ax3_1_time_dep = fig_time_dep.add_subplot(gs_time_dep[0, 1], projection=\"3d\")\n",
+    "\n",
+    "# first timestep\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_0_time_dep, color=\"r\", label=\"reference\")\n",
+    "vs.plot_coordinate_system(cs_mov_in_ref, ax3_0_time_dep, color=\"g\", label=\"cs_mov_in_ref\", time_idx=0)\n",
+    "vs.plot_coordinate_system(cs_rot_in_ref, ax3_0_time_dep, color=\"b\", label=\"cs_rot_in_ref\", time_idx=0)\n",
+    "vs.plot_coordinate_system(cs_movrot_in_ref, ax3_0_time_dep, color=\"c\", label=\"cs_movrot_in_ref\", time_idx=0)\n",
+    "ax3_0_time_dep.set_xlim([-3, 3])\n",
+    "ax3_0_time_dep.set_ylim([-3, 3])\n",
+    "ax3_0_time_dep.set_zlim([-3, 3])\n",
+    "ax3_0_time_dep.set_title(\"first timestep\")\n",
+    "ax3_0_time_dep.legend()\n",
+    "\n",
+    "\n",
+    "# second timestep\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_1_time_dep, color=\"r\", label=\"reference\")\n",
+    "vs.plot_coordinate_system(cs_mov_in_ref, ax3_1_time_dep, color=\"g\", label=\"cs_mov_in_ref\", time_idx=1)\n",
+    "vs.plot_coordinate_system(cs_rot_in_ref, ax3_1_time_dep, color=\"b\", label=\"cs_rot_in_ref\", time_idx=1)\n",
+    "vs.plot_coordinate_system(cs_movrot_in_ref, ax3_1_time_dep, color=\"c\", label=\"cs_movrot_in_ref\", time_idx=1)\n",
+    "ax3_1_time_dep.set_xlim([-3, 3])\n",
+    "ax3_1_time_dep.set_ylim([-3, 3])\n",
+    "ax3_1_time_dep.set_zlim([-3, 3])\n",
+    "ax3_1_time_dep.set_title(\"second timestep\")\n",
+    "ax3_1_time_dep.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: \n",
+    "- Xarray inputs\n",
+    "- time dependency\n",
+    "- time interpolation\n",
+    "- data transformation (manually)"
    ]
   },
   {
