--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -78,7 +78,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e80e39467cb443b7a571442249389db4",
+       "model_id": "044cd2e8bdf04394aa2440a020626d8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e87e0a671ef4a6b8554e0b10e555e93",
+       "model_id": "1edfe369a6864edfb552e07ca7b50ef3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b54cee48a00b4598a047acec745c6c4a",
+       "model_id": "e1b0a280db844c84be9d91e9c0bcac14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,7 +418,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d706aa281c34531b66f7238c39c1060",
+       "model_id": "430a2a2a47ac44ad852576464444c1a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,7 +432,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c30edc6efc5141fb88627a666213aadd",
+       "model_id": "6a85490cd38e4a60b55a4206b19fb281",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,7 +498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00853518739e4509bb6ebd6176091ab8",
+       "model_id": "b88e67db212d4de09fdaac8bed3c4da4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,7 +512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb026d54f4424aaca1481d4fb68495d3",
+       "model_id": "946b3669e60f40d597b7b8f6e3d6c910",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,7 +598,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c2337fcbfb749c3874565346b01b3d9",
+       "model_id": "00d2f8e84a394dad93ba7da9c2737b8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +612,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f61c4f5ef90>"
+       "<matplotlib.legend.Legend at 0x7f69f153c7d0>"
       ]
      },
      "execution_count": 11,
@@ -713,13 +713,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84a0862f140a49a6ba6c2524bcebbaee",
+       "model_id": "f4e6d7e05b1d4590b2d627a6f6d819e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,10 +733,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f61c1967150>"
+       "<matplotlib.legend.Legend at 0x7f69f13e5550>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,24 +792,128 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Time interpolation\n",
+    "\n",
+    "It is also possible, to interpolate a coordinate system's orientations and coordinates in time by using the `interp_time` function. You have to pass it a single or multiple target times for the interpolation. As for the constructor, you can pass any type that is convertable to a `pandas.DatetimeIndex`. Alternatively, you can pass another `LocalCoordinateSystem` which provides the target timestamps. The return value of this function is a new `LocalCoordinateSystem` with interpolated orientations and coordinates. \n",
+    "\n",
+    "In case that a target time for the interpolation lies outside of the `LocalCoordinateSystem`s' time range, the boundary value is broadcasted.\n",
+    "\n",
+    "Here is an example:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3ad290ed2de44d5942c19cb8cd17c29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f69e6fdf290>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# original coordinate system\n",
+    "time = [\"2010-02-02\", \"2010-02-07\"]\n",
+    "\n",
+    "coordinates_tdp = [[0, 3, 0], [-2, 3, 2]]\n",
+    "orientation_tdp = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]]\n",
+    "cs_tdp_in_ref = tf.LocalCoordinateSystem(orientation=orientation_movrot, coordinates=coordinates_movrot, time=time)\n",
+    "\n",
+    "time_interp = [\"2010-02-01\", \"2010-02-03\",\"2010-02-04\",\"2010-02-05\",\"2010-02-06\", \"2010-02-11\"]\n",
+    "cs_interp_in_ref = cs_tdp_in_ref.interp_time(time_interp)\n",
+    "\n",
+    "# plot coordinate systems\n",
+    "fig_interp = plt.figure()\n",
+    "fig_interp.canvas.layout.height = \"500px\"\n",
+    "fig_interp.canvas.layout.width = \"1000px\"\n",
+    "gs_interp = fig_interp.add_gridspec(1, 2)\n",
+    "ax3_0_interp = fig_interp.add_subplot(gs_interp[0, 0], projection=\"3d\")\n",
+    "ax3_1_interp = fig_interp.add_subplot(gs_interp[0, 1], projection=\"3d\")\n",
+    "\n",
+    "# first timestep\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_0_interp, color=\"r\", label=\"reference\")\n",
+    "vs.plot_coordinate_system(cs_tdp_in_ref, ax3_0_interp, color=\"g\", label=\"2010-02-01\", time_idx=0)\n",
+    "vs.plot_coordinate_system(cs_tdp_in_ref, ax3_0_interp, color=\"b\", label=\"2010-02-07\", time_idx=1)\n",
+    "ax3_0_interp.set_xlim([-3, 3])\n",
+    "ax3_0_interp.set_ylim([-3, 3])\n",
+    "ax3_0_interp.set_zlim([-3, 3])\n",
+    "ax3_0_interp.set_title(\"original system\")\n",
+    "ax3_0_interp.legend()\n",
+    "\n",
+    "\n",
+    "# second timestep\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_1_interp, color=\"r\", label=\"reference\")\n",
+    "num_time = len(time_interp)\n",
+    "colors = [[0,1,0],[0,1,0.5],[0,1,1],[0,0.5,1],[0,0,1],[0.5,0,1]]\n",
+    "for i in range(num_time):\n",
+    "    vs.plot_coordinate_system(cs_interp_in_ref, ax3_1_interp, color=colors[i], label=time_interp[i], time_idx=i)\n",
+    "ax3_1_interp.set_xlim([-3, 3])\n",
+    "ax3_1_interp.set_ylim([-3, 3])\n",
+    "ax3_1_interp.set_zlim([-3, 3])\n",
+    "ax3_1_interp.set_title(\"interpolated system\")\n",
+    "ax3_1_interp.legend()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: \n",
-    "- Xarray inputs\n",
-    "- time dependency\n",
-    "- time interpolation\n",
-    "- data transformation (manually)"
+    "As you can see, the time values `\"2010-02-01\"` and `\"2010-02-11\"`, which lie outside the original range from `\"2010-02-02\"` and `\"2010-02-07\"`  still get valid values due to the broadcasting accross time range boundaries. The intermediate coordinates and orientations are interpolated as expected.\n",
+    "\n",
+    "# Transformation of spatial data\n",
+    "\n",
+    "The `LocalCoodinateSystem` only defines how the different coordinate systems are oriented towards each other. If you want to transform spatial data which is defined in one coordinate system (for example specimen geometry/point cloud) you have to use the `CoordinateSystemManager`, which is discussed in the next tutorial, or do the transformation manually.\n",
+    "For the manual transformation, you can get all you need from the `LocalCoordinateSystem` using its accessor properties:\n",
+    "\n",
+    "~~~\n",
+    "orientation = cs_a_in_b.orientation\n",
+    "coordinates = cs_a_in_b.coordinates\n",
+    "~~~\n",
+    "\n",
+    "The returned data is an `xarray.DataFrame`. In case youare not used to work with this data type, you can get a `numpy.ndarray` by simply using their `data` property:\n",
+    "\n",
+    "~~~\n",
+    "orientation_numpy = cs_a_in_b.orientation.data\n",
+    "coordinates_numpy = cs_a_in_b.coordinates.data\n",
+    "~~~\n",
+    "\n",
+    "Keep in mind, that you actually get an array of matrices (`orientation`) and vectors (`coordinates`) if the corresponding component is time dependent. The transformation itself is done by the equation:\n",
+    "\n",
+    "$$v_b = O_{ab} \\cdot v_a + c_{ab}$$\n",
+    "\n",
+    "where $v_a$ is a data point defined in coordinate system `a`, $O_{ab}$ is the orientation matrix of `a` in `b`, $c_{ab}$ the coordinates of `a` in `b` and $v_b$ the transformed data point.\n",
+    "\n",
+    "> **TODO:** Short example "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Internal xarray structure \n",
+    "\n",
+    "The local coordinate system and many other components of the WeldX package use xarray data frames internally. So it is also possible to pass xarray data frames to a lot of functions and the constructor. However, they need a certain structure which will be described here"
    ]
   },
   {
