--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "As shown above you pass the `groove_type` along with the `attributes` and get your `Groove class`. Function `get_groove` has a detailled description for all Groove Types and their Attributes.\n",
     "\n",
-    "Note: All classes can also be created separately with the classes, but this is not recommended:\n",
+    "Note: All classes can also be created separately with the classes, but this is not recommended.\n",
     "```Python\n",
     "from weldx.asdf.tags.weldx.core.iso_groove import VGroove\n",
     "\n",
@@ -103,7 +103,7 @@
     "\n",
     "# Convert a groove to a profile\n",
     "\n",
-    "Each `groove class` has a method to convert this class directly into a `Profile`. Just use `to_profile`to apply this method to a `groove class`."
+    "Each `groove class` has a method to convert this class directly into a `Profile`. Just use `to_profile`to apply this method to a `groove class`. To learn more about `Profile` look into `geometry_01_profiles.ipynb`."
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A profile designed in this way always consists of the basic groove shape and two profile halves.\n",
+    "A profile designed in this way always consists of the basic groove shape and two profile halves, as shown below in the plots.\n",
     "\n",
     "# Using plot on a profile constructed by a groove\n",
     "\n",
@@ -436,6 +436,215 @@
     "A quick introduction how to use ASDF with our grooves.\n",
     "\n",
     "Save as `.yaml` File:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with asdf.AsdfFile(\n",
+    "    dict(test_v_groove = v_groove),\n",
+    "    extensions=[WeldxExtension(), WeldxAsdfExtension()],\n",
+    ") as ff:\n",
+    "    ff.write_to(\"testfile.yaml\", all_array_storage=\"inline\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `testfile.yaml` is now stored in the weldx folder. Now a quick overview over the file with a `notebook_fileprinter`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">.highlight .hll { background-color: #ffffcc }\n",
+       ".highlight  { background: #f8f8f8; }\n",
+       ".highlight .c { color: #408080; font-style: italic } /* Comment */\n",
+       ".highlight .err { border: 1px solid #FF0000 } /* Error */\n",
+       ".highlight .k { color: #008000; font-weight: bold } /* Keyword */\n",
+       ".highlight .o { color: #666666 } /* Operator */\n",
+       ".highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */\n",
+       ".highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */\n",
+       ".highlight .cp { color: #BC7A00 } /* Comment.Preproc */\n",
+       ".highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */\n",
+       ".highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */\n",
+       ".highlight .cs { color: #408080; font-style: italic } /* Comment.Special */\n",
+       ".highlight .gd { color: #A00000 } /* Generic.Deleted */\n",
+       ".highlight .ge { font-style: italic } /* Generic.Emph */\n",
+       ".highlight .gr { color: #FF0000 } /* Generic.Error */\n",
+       ".highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */\n",
+       ".highlight .gi { color: #00A000 } /* Generic.Inserted */\n",
+       ".highlight .go { color: #888888 } /* Generic.Output */\n",
+       ".highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */\n",
+       ".highlight .gs { font-weight: bold } /* Generic.Strong */\n",
+       ".highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */\n",
+       ".highlight .gt { color: #0044DD } /* Generic.Traceback */\n",
+       ".highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */\n",
+       ".highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */\n",
+       ".highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */\n",
+       ".highlight .kp { color: #008000 } /* Keyword.Pseudo */\n",
+       ".highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */\n",
+       ".highlight .kt { color: #B00040 } /* Keyword.Type */\n",
+       ".highlight .m { color: #666666 } /* Literal.Number */\n",
+       ".highlight .s { color: #BA2121 } /* Literal.String */\n",
+       ".highlight .na { color: #7D9029 } /* Name.Attribute */\n",
+       ".highlight .nb { color: #008000 } /* Name.Builtin */\n",
+       ".highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */\n",
+       ".highlight .no { color: #880000 } /* Name.Constant */\n",
+       ".highlight .nd { color: #AA22FF } /* Name.Decorator */\n",
+       ".highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */\n",
+       ".highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */\n",
+       ".highlight .nf { color: #0000FF } /* Name.Function */\n",
+       ".highlight .nl { color: #A0A000 } /* Name.Label */\n",
+       ".highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */\n",
+       ".highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */\n",
+       ".highlight .nv { color: #19177C } /* Name.Variable */\n",
+       ".highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */\n",
+       ".highlight .w { color: #bbbbbb } /* Text.Whitespace */\n",
+       ".highlight .mb { color: #666666 } /* Literal.Number.Bin */\n",
+       ".highlight .mf { color: #666666 } /* Literal.Number.Float */\n",
+       ".highlight .mh { color: #666666 } /* Literal.Number.Hex */\n",
+       ".highlight .mi { color: #666666 } /* Literal.Number.Integer */\n",
+       ".highlight .mo { color: #666666 } /* Literal.Number.Oct */\n",
+       ".highlight .sa { color: #BA2121 } /* Literal.String.Affix */\n",
+       ".highlight .sb { color: #BA2121 } /* Literal.String.Backtick */\n",
+       ".highlight .sc { color: #BA2121 } /* Literal.String.Char */\n",
+       ".highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */\n",
+       ".highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */\n",
+       ".highlight .s2 { color: #BA2121 } /* Literal.String.Double */\n",
+       ".highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */\n",
+       ".highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */\n",
+       ".highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */\n",
+       ".highlight .sx { color: #008000 } /* Literal.String.Other */\n",
+       ".highlight .sr { color: #BB6688 } /* Literal.String.Regex */\n",
+       ".highlight .s1 { color: #BA2121 } /* Literal.String.Single */\n",
+       ".highlight .ss { color: #19177C } /* Literal.String.Symbol */\n",
+       ".highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */\n",
+       ".highlight .fm { color: #0000FF } /* Name.Function.Magic */\n",
+       ".highlight .vc { color: #19177C } /* Name.Variable.Class */\n",
+       ".highlight .vg { color: #19177C } /* Name.Variable.Global */\n",
+       ".highlight .vi { color: #19177C } /* Name.Variable.Instance */\n",
+       ".highlight .vm { color: #19177C } /* Name.Variable.Magic */\n",
+       ".highlight .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"c1\">#ASDF 1.0.0</span>\n",
+       "<span class=\"c1\">#ASDF_STANDARD 1.4.0</span>\n",
+       "<span class=\"nt\">%YAML</span> <span class=\"m\">1.1</span>\n",
+       "<span class=\"nt\">%TAG</span> <span class=\"kt\">!</span> <span class=\"kt\">tag:stsci.edu:asdf/</span>\n",
+       "<span class=\"nn\">---</span> <span class=\"kt\">!core/asdf-1.1.0</span>\n",
+       "<span class=\"nt\">asdf_library</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">author</span><span class=\"p\">:</span> <span class=\"nv\">Space Telescope Science Institute</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> homepage</span><span class=\"p\">:</span> <span class=\"s\">&#39;http://github.com/spacetelescope/asdf&#39;</span><span class=\"p p-Indicator\">,</span>\n",
+       "<span class=\"nt\">  name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.5.1</span><span class=\"p p-Indicator\">}</span>\n",
+       "<span class=\"nt\">history</span><span class=\"p\">:</span>\n",
+       "  <span class=\"nt\">extensions</span><span class=\"p\">:</span>\n",
+       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
+       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxExtension</span>\n",
+       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">}</span>\n",
+       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
+       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">asdf.extension.BuiltinExtension</span>\n",
+       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.5.1</span><span class=\"p p-Indicator\">}</span>\n",
+       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
+       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxAsdfExtension</span>\n",
+       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">}</span>\n",
+       "<span class=\"nt\">test_v_groove</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/core/iso_groove-1.0.0&gt;</span>\n",
+       "  <span class=\"nt\">type</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">SingleVGroove</span>\n",
+       "  <span class=\"nt\">components</span><span class=\"p\">:</span>\n",
+       "    <span class=\"nt\">alpha</span><span class=\"p\">:</span> <span class=\"kt\">!unit/quantity-1.1.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"nv\">degree</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> value</span><span class=\"p\">:</span> <span class=\"nv\">55</span><span class=\"p p-Indicator\">}</span>\n",
+       "    <span class=\"nt\">b</span><span class=\"p\">:</span> <span class=\"kt\">!unit/quantity-1.1.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"nv\">millimeter</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> value</span><span class=\"p\">:</span> <span class=\"nv\">2</span><span class=\"p p-Indicator\">}</span>\n",
+       "    <span class=\"nt\">c</span><span class=\"p\">:</span> <span class=\"kt\">!unit/quantity-1.1.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"nv\">millimeter</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> value</span><span class=\"p\">:</span> <span class=\"nv\">1</span><span class=\"p p-Indicator\">}</span>\n",
+       "    <span class=\"nt\">code_number</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[</span><span class=\"s\">&#39;1.3&#39;</span><span class=\"p p-Indicator\">,</span> <span class=\"s\">&#39;1.5&#39;</span><span class=\"p p-Indicator\">]</span>\n",
+       "    <span class=\"nt\">t</span><span class=\"p\">:</span> <span class=\"kt\">!unit/quantity-1.1.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"nv\">millimeter</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> value</span><span class=\"p\">:</span> <span class=\"nv\">10</span><span class=\"p p-Indicator\">}</span>\n",
+       "<span class=\"nn\">...</span>\n",
+       "</pre></div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    \n",
+    "    from pygments import highlight\n",
+    "    from pygments.lexers import get_lexer_for_filename, get_lexer_by_name\n",
+    "    from pygments.formatters import HtmlFormatter\n",
+    "    import IPython\n",
+    "except ImportError as error:\n",
+    "    print(error)\n",
+    "    pass\n",
+    "else:\n",
+    "\n",
+    "    def notebook_fileprinter(filename):\n",
+    "        \"\"\"\n",
+    "        Prints the code from the filename highlighted depending on its type.\n",
+    "\n",
+    "        eg.:\n",
+    "        > notebook_fileprinter(test.py)\n",
+    "        > def test:\n",
+    "        >     return\n",
+    "        Would have python highlighting.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        with open(filename) as f:\n",
+    "            code = f.read()\n",
+    "\n",
+    "        if Path(filename).suffix == \".asdf\":\n",
+    "            lexer = get_lexer_by_name(\"YAML\")\n",
+    "        else:\n",
+    "            lexer = get_lexer_for_filename(filename)\n",
+    "        formatter = HtmlFormatter()\n",
+    "        return IPython.display.HTML(\n",
+    "            '<style type=\"text/css\">{}</style>{}'.format(\n",
+    "                formatter.get_style_defs(\".highlight\"),\n",
+    "                highlight(code, lexer, formatter),\n",
+    "            )\n",
+    "        )\n",
+    "    \n",
+    "    \n",
+    "notebook_fileprinter(\"testfile.yaml\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The single V-Groove is now stored in the .yaml file with the name `test_v_groove`. It has a type and its components shown.\n",
+    "\n",
+    "Now let's load the file `testfile.yaml` again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VGroove(t=<Quantity(10, 'millimeter')>, alpha=<Quantity(55, 'degree')>, c=<Quantity(1, 'millimeter')>, b=<Quantity(2, 'millimeter')>, code_number=['1.3', '1.5'])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reopen = asdf.open(\n",
+    "    \"testfile.yaml\",\n",
+    "    extensions=[WeldxExtension(), WeldxAsdfExtension()],\n",
+    ")\n",
+    "reopen[\"test_v_groove\"]"
    ]
   },
   {
