some fixes and Tutorial improvements

--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -618,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The single V-Groove is now stored in the .yaml file with the name `test_v_groove`. It has a type and its components shown.\n",
+    "The single V-Groove is now stored in the .yaml file with the name `test_v_groove`. It has a `type` and its `components` shown.\n",
     "\n",
     "Now let's load the file `testfile.yaml` again:"
    ]
