Finish xarray section of coordinate system tutorial

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import xarray as xr\n",
     "\n",
     "import weldx.visualization as vs\n",
     "import weldx.transformations as tf"
@@ -78,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "044cd2e8bdf04394aa2440a020626d8a",
+       "model_id": "80092f9dd4a84f3594a9a02b0bef4af1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1edfe369a6864edfb552e07ca7b50ef3",
+       "model_id": "2dc4e4d50d0e41e5a62899dc41386b09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1b0a280db844c84be9d91e9c0bcac14",
+       "model_id": "652d7eaa45704579bfe87e5702ca30a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "430a2a2a47ac44ad852576464444c1a8",
+       "model_id": "78e776d5687b43568a7f6c9bf586ed86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a85490cd38e4a60b55a4206b19fb281",
+       "model_id": "aa030c2a83904a5daa57d2709bed505b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,7 +499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b88e67db212d4de09fdaac8bed3c4da4",
+       "model_id": "0ba798b2078e4c1f81197b4fa00a8899",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,7 +513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "946b3669e60f40d597b7b8f6e3d6c910",
+       "model_id": "b55d584d46a14ca2ae5c993a5aba1434",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,7 +599,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00d2f8e84a394dad93ba7da9c2737b8d",
+       "model_id": "e38d74bdfe8841ee91a21fcb3764ac51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +613,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f69f153c7d0>"
+       "<matplotlib.legend.Legend at 0x7f956cbc9a90>"
       ]
      },
      "execution_count": 11,
@@ -651,8 +652,7 @@
     "ax3_1.set_ylim([-3, 3])\n",
     "ax3_1.set_zlim([-3, 3])\n",
     "ax3_1.set_title(\"parent in child\")\n",
-    "ax3_1.legend()\n",
-    "\n"
+    "ax3_1.legend()"
    ]
   },
   {
@@ -719,7 +719,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4e6d7e05b1d4590b2d627a6f6d819e2",
+       "model_id": "48208b2cf1b2464d87ee2d3926aa2c89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +733,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f69f13e5550>"
+       "<matplotlib.legend.Legend at 0x7f956caaa750>"
       ]
      },
      "execution_count": 12,
@@ -746,11 +746,11 @@
     "time = [\"2010-02-01\", \"2010-02-02\"]\n",
     "\n",
     "orientation_mov = [[0, -1, 0], [1, 0, 0], [0, 0, 1]]\n",
-    "coordinates_mov = [[-3, 0, 0], [0, 0, 2]] \n",
+    "coordinates_mov = [[-3, 0, 0], [0, 0, 2]]\n",
     "cs_mov_in_ref = tf.LocalCoordinateSystem(orientation=orientation_mov, coordinates=coordinates_mov, time=time)\n",
     "\n",
-    "orientation_rot = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]] \n",
-    "coordinates_rot = [1, 0, 2] \n",
+    "orientation_rot = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]]\n",
+    "coordinates_rot = [1, 0, 2]\n",
     "cs_rot_in_ref = tf.LocalCoordinateSystem(orientation=orientation_rot, coordinates=coordinates_rot, time=time)\n",
     "\n",
     "coordinates_movrot = [[0, 3, 0], [-2, 3, 2]]\n",
@@ -804,13 +804,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3ad290ed2de44d5942c19cb8cd17c29",
+       "model_id": "cea2044fb96b424ba6c68200cf98fb0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -824,10 +824,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f69e6fdf290>"
+       "<matplotlib.legend.Legend at 0x7f956c79d350>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
     "orientation_tdp = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]]\n",
     "cs_tdp_in_ref = tf.LocalCoordinateSystem(orientation=orientation_movrot, coordinates=coordinates_movrot, time=time)\n",
     "\n",
-    "time_interp = [\"2010-02-01\", \"2010-02-03\",\"2010-02-04\",\"2010-02-05\",\"2010-02-06\", \"2010-02-11\"]\n",
+    "time_interp = [\"2010-02-01\", \"2010-02-03\", \"2010-02-04\", \"2010-02-05\", \"2010-02-06\", \"2010-02-11\"]\n",
     "cs_interp_in_ref = cs_tdp_in_ref.interp_time(time_interp)\n",
     "\n",
     "# plot coordinate systems\n",
@@ -865,7 +865,7 @@
     "# second timestep\n",
     "vs.plot_coordinate_system(cs_ref, ax3_1_interp, color=\"r\", label=\"reference\")\n",
     "num_time = len(time_interp)\n",
-    "colors = [[0,1,0],[0,1,0.5],[0,1,1],[0,0.5,1],[0,0,1],[0.5,0,1]]\n",
+    "colors = [[0, 1, 0], [0, 1, 0.5], [0, 1, 1], [0, 0.5, 1], [0, 0, 1], [0.5, 0, 1]]\n",
     "for i in range(num_time):\n",
     "    vs.plot_coordinate_system(cs_interp_in_ref, ax3_1_interp, color=colors[i], label=time_interp[i], time_idx=i)\n",
     "ax3_1_interp.set_xlim([-3, 3])\n",
@@ -913,7 +913,80 @@
    "source": [
     "# Internal xarray structure \n",
     "\n",
-    "The local coordinate system and many other components of the WeldX package use xarray data frames internally. So it is also possible to pass xarray data frames to a lot of functions and the constructor. However, they need a certain structure which will be described here"
+    "The local coordinate system and many other components of the WeldX package use xarray data frames internally. So it is also possible to pass xarray data frames to a lot of functions and the constructor. However, they need a certain structure which will be described here. If you are not familiar with the xarray package, you should first read the [documentation](http://xarray.pydata.org/en/stable/).\n",
+    "\n",
+    "To pass an xarray data frame as coordinate to a `LocalCoordinateSystem`, it must at least have a dimension `c`. It represents the location in 3d space of the coordinate system and must always be of length 3. Those components must be named coordinates of the data frame (`coords={\"c\": [\"x\", \"y\", \"z\"]}`). An optional dimension is `time`. It can be of arbitrary length, but the timestamps must be added as coordinates.\n",
+    "\n",
+    "The same conventions that are used for the coordinates also apply to the orientations. Additinally, they must have another dimension `v` of length 3, which are enumerated (`\"v\": [0, 1, 2]`). `c` and `v` are the rows and columns of the orientaion matrix.\n",
+    "\n",
+    "**Example:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9ee96912313409f82f2da0822adf21f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f956c679b50>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time = [\"2010-02-02\", \"2010-02-07\"]\n",
+    "coordinates_tdp = [[0, 3, 0], [-2, 3, 2]]\n",
+    "orientation_tdp = [[[1, 0, 0], [0, 1, 0], [0, 0, 1]], [[0, -1, 0], [1, 0, 0], [0, 0, 1]]]\n",
+    "\n",
+    "dsx_coordinates = xr.DataArray(data=coordinates_tdp, dims=[\"time\", \"c\"], coords={\"time\": time, \"c\": [\"x\", \"y\", \"z\"]})\n",
+    "dsx_orientation = xr.DataArray(\n",
+    "    data=orientation_tdp, dims=[\"time\", \"c\", \"v\"], coords={\"time\": time, \"c\": [\"x\", \"y\", \"z\"], \"v\": [0, 1, 2]},\n",
+    ")\n",
+    "\n",
+    "cs_xr = tf.LocalCoordinateSystem(orientation=dsx_orientation, coordinates=dsx_coordinates)\n",
+    "\n",
+    "\n",
+    "# plot coordinate systems\n",
+    "fig_dsx = plt.figure()\n",
+    "fig_dsx.canvas.layout.height = \"500px\"\n",
+    "fig_dsx.canvas.layout.width = \"500px\"\n",
+    "gs_dsx = fig_dsx.add_gridspec(1, 1)\n",
+    "ax3_dsx = fig_dsx.add_subplot(gs_dsx[0, 0], projection=\"3d\")\n",
+    "\n",
+    "# first timestep\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_dsx, color=\"r\", label=\"reference\")\n",
+    "vs.plot_coordinate_system(cs_xr, ax3_dsx, color=\"g\", label=\"2010-02-01\", time_idx=0)\n",
+    "vs.plot_coordinate_system(cs_xr, ax3_dsx, color=\"b\", label=\"2010-02-07\", time_idx=1)\n",
+    "ax3_dsx.set_xlim([-3, 3])\n",
+    "ax3_dsx.set_ylim([-3, 3])\n",
+    "ax3_dsx.set_zlim([-3, 3])\n",
+    "ax3_dsx.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `weldx.utility` package contains two utility functions to create xarray data frames that can be passed as `orientation` and `coordinates` to an `LocalCoordinateSystem`. They are named `xr_3d_vector` and `xr_3d_matrix`. Please read the API documentation for further information."
    ]
   },
   {
