added a phrase that the quantity function used is a pint quantity

--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Creating grooves\n",
-    "from weldx import Q_ as Quantity\n",
+    "from weldx import Q_ as Quantity # pint quantity from the weldx package\n",
     "from weldx.asdf.tags.weldx.core.iso_groove import get_groove\n",
     "\n",
     "# All test grooves\n",
@@ -59,7 +59,7 @@
    "source": [
     "# Creating a groove\n",
     "\n",
-    "Each groove type has different input variables, which must be passed along with it. For this we need the `Groove Type` as string and the `attributes` that describe this `Groove Type`.\n",
+    "Each groove type has different input variables, which must be passed along with it. For this we need the `Groove Type` as string and the `attributes` that describe this `Groove Type`. All attributes are used with pint quantity, we recommend to use the quantity class created by us.\n",
     "\n",
     "Here an Example with a V-Groove. Note that `groove_type=\"VGroove\"` and the required attributes are `workpiece_thickness`, `groove_angle`, `root_gap` and `root_face`."
    ]
@@ -611,7 +611,7 @@
     "        )\n",
     "    \n",
     "    \n",
-    "notebook_fileprinter(\"testfile.yaml\")\n"
+    "notebook_fileprinter(\"testfile.yaml\")"
    ]
   },
   {
